test/files/neg/t5702-neg-bad-brace.scala

object Test {

  def main(args: Array[String]): Unit = {
    val is = List(1,2,3)

    is match {
      case List(1, _*} =>
    }
  }
}
