test/files/neg/t5702-neg-bad-brace.check
t5702-neg-bad-brace.scala:7: error: Unmatched closing brace '}' ignored here
      case List(1, _*} =>
                     ^
t5702-neg-bad-brace.scala:10: error: eof expected but '}' found.
}
^
2 errors
